--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,13 @@ go:
     - 1.7.x
     - 1.8.x
     - tip
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - ./go.test.sh
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -t 083f6d1a-0f1e-467e-ac23-fd39e21078c1
+  
