尝试下增加覆盖率统计报告

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - go get -t -v ./...
 
 script:
-  - ./go.test.sh
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -t 083f6d1a-0f1e-467e-ac23-fd39e21078c1
+  - bash <(curl -s https://codecov.io/bash)
 
